--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.nilhcem.fakesmtp</groupId>
 	<artifactId>fakesmtp</artifactId>
-	<version>2.1-SNAPSHOT</version>
+	<version>2.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Fake SMTP</name>
@@ -22,14 +22,21 @@
 		<dependency>
 			<groupId>com.miglayout</groupId>
 			<artifactId>miglayout-swing</artifactId>
-			<version>5.0</version>
+			<version>5.1</version>
+		</dependency>
+
+		<!-- text editor -->
+		<dependency>
+			<groupId>com.fifesoft</groupId>
+			<artifactId>rsyntaxtextarea</artifactId>
+			<version>2.6.1</version>
 		</dependency>
 
 		<!-- SubEtha SMTP: easy-to-use server-side SMTP library for Java -->
 		<dependency>
-		    <groupId>org.subethamail</groupId>
-		    <artifactId>subethasmtp</artifactId>
-		    <version>3.1.7</version>
+			<groupId>org.subethamail</groupId>
+			<artifactId>subethasmtp</artifactId>
+			<version>3.1.7</version>
 		</dependency>
 
 		<!-- Logging: slf4j + logback -->
@@ -46,23 +53,24 @@
 
 		<!-- Commons IO: utilities to assist with developing IO functionality -->
 		<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>2.4</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
 		</dependency>
 
-		<!-- Commons CLI: API for presenting, processing and validating a command line interface -->
+		<!-- Commons CLI: API for presenting, processing and validating a command 
+			line interface -->
 		<dependency>
-		    <groupId>commons-cli</groupId>
-		    <artifactId>commons-cli</artifactId>
-		    <version>1.2</version>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
 		</dependency>
 
 		<!-- Apple java extensions (to use a custom icon in the Mac Dock) -->
 		<dependency>
-		    <groupId>com.apple</groupId>
-		    <artifactId>AppleJavaExtensions</artifactId>
-		    <version>1.4</version>
+			<groupId>com.apple</groupId>
+			<artifactId>AppleJavaExtensions</artifactId>
+			<version>1.4</version>
 		</dependency>
 
 		<!-- Integration test -->
@@ -73,10 +81,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-email</artifactId>
-		    <version>1.3.3</version>
-		    <scope>test</scope>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.5</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -88,10 +96,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.7.0</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -99,7 +107,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>2.21.0</version>
 				<executions>
 					<execution>
 						<id>integration-test</id>
@@ -236,7 +244,8 @@
 							<version>2.0</version>
 						</plugin>
 
-						<!-- Generates a report on various tags found in the code, like @todo, TODO, @fixme, //FIXME tags. -->
+						<!-- Generates a report on various tags found in the code, like @todo, 
+							TODO, @fixme, //FIXME tags. -->
 						<plugin>
 							<groupId>org.codehaus.mojo</groupId>
 							<artifactId>taglist-maven-plugin</artifactId>
